# anthropic-learning-journey

./: .gitignore  README.md  mcp_server.py
.claude/: settings.json
.claude/commands/: log.md  today.md
certification/: CROSS-DOMAIN-MOCK.md  EXAM-PREP.md  EXAM-WEEK-CHECKLIST.md  FINAL-REVISION-LIST.md  NOTES-TOPICS.md  STUDY-PLAN.md  TOPIC-DEFINITIONS.md  TRICKY-QUESTIONS.md  community-practice-exam-77q.md
certification/projects/: 01-customer-support-agent-phase-1.md  01-customer-support-agent-phase-2.md  01-customer-support-agent.md  02-claude-code-team-workflow.md  03-structured-data-extraction.md  04-multi-agent-research.md  05-claude-code-cicd.md  06-developer-productivity-explorer.md  prep-exercise-01-multi-tool-agent.md  prep-exercise-02-claude-code-team-workflow.md  prep-exercise-03-structured-data-extraction.md  prep-exercise-04-multi-agent-research.md
certification/tracks/: prep-exercise-01-multi-tool-agent.md  prep-exercise-02-claude-code-team-workflow.md  prep-exercise-03-structured-data-extraction.md  prep-exercise-04-multi-agent-research.md
docs/: PYTHON-FLUENCY.md
docs/python/: P-01-setup-and-tooling.md  P-02-core-language-differences.md  P-03-data-structures-and-idioms.md  P-04-functions-properly.md  P-05-oop-the-python-way.md  P-06-type-hints.md  P-07-errors-and-resources.md  P-08-iterators-generators-and-streaming.md  P-09-async-python.md  P-10-pydantic.md  P-11-testing-with-pytest.md  P-12-working-with-the-outside-world.md
projects/cert-01-customer-support-agent/: main.py  (+7 more)
projects/mcp-chat-cli/: mcp_client.py  mcp_server.py  pyproject.toml
(+77 files in other folders)
